fixed horizontal scroll in filter, fixed gap for filterbeds on mobile, reduced gap for filterbeds on other screens, fixed clear filter after hide/open it

--- a/src/components/ApartmentsComponent/Apartments.module.scss
+++ b/src/components/ApartmentsComponent/Apartments.module.scss
@@ -254,8 +254,13 @@
   }
 
   @media screen and (min-width: $desktop) {
+    width: 500px;
     position: absolute;
-    right: -16px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
   }
 }
 
