--- a/src/components/FilterRooms/FilterRoomItem/FilterRoomItem.module.scss
+++ b/src/components/FilterRooms/FilterRoomItem/FilterRoomItem.module.scss
@@ -106,7 +106,7 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  column-gap: 16px;
+  column-gap: 4px;
   position: relative;
 
   &::before {
@@ -125,6 +125,7 @@
 
   @media screen and (min-width: $tablet) {
     font-size: 20px;
+    column-gap: 10px;
   }
 }
 
